--- a/CHECKPOINT-2/home.html
+++ b/CHECKPOINT-2/home.html
@@ -2,7 +2,7 @@
 <html lang="pt-bt">
    <head>
       <meta charset="UTF-8">
-      <title>home</title>
+      <title>Início</title>
       <link rel="stylesheet" type="text/css" href="estilo.css">
    </head>
    <body>
@@ -39,7 +39,11 @@
          </section>
 
          <section class="catalago">
-            Vinhos
+            Vinhos <img id="sla" src="imagens/pairing.png" alt="Image" height="20" width="20">
+
+
+
+
          </section>
       </div>
    </main>
