--- a/CHECKPOINT-2/sobreNós.html
+++ b/CHECKPOINT-2/sobreNós.html
@@ -2,7 +2,7 @@
 <html lang="pt-bt">
    <head>
       <meta charset="UTF-8">
-      <title>home</title>
+      <title>Sobre</title>
       <link rel="stylesheet" type="text/css" href="estilo.css">
    </head>
    <body>
