--- a/CHECKPOINT-2/home.html
+++ b/CHECKPOINT-2/home.html
@@ -39,7 +39,22 @@
          </section>
 
          <section class="catalago">
-            Vinhos <img id="sla" src="imagens/pairing.png" alt="Image" height="20" width="20">
+            <table>
+               <tbody> 
+                  <tr>
+                     <td class="icon"><a href="#"><img class="icon" src="./imagens/pairing.png"></a></td><td class="nome">Vinho</td></td><td class="preco">Preço</td>
+                  </tr>
+                  <tr>
+                     <td class="icon"><a href="#"><img class="icon" src="./imagens/pairing.png"></a></td><td class="nome">Vinho</td></td><td class="preco">Preço</td>
+                  </tr>
+                  <tr>
+                     <td class="icon"><a href="#"><img class="icon" src="./imagens/pairing.png"></a></td><td class="nome">Vinho</td></td><td class="preco">Preço</td>
+                  </tr>
+                  <tr>
+                     <td class="icon"><a href="#"><img class="icon" src="./imagens/pairing.png"></a></td><td class="nome">Vinho</td></td><td class="preco">Preço</td>
+                  </tr>
+               </tbody>
+            </table>
 
 
 
