--- a/CHECKPOINT-3.0/servicos.html
+++ b/CHECKPOINT-3.0/servicos.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-bt">
-   <head>
-      <meta charset="UTF-8">
-      <title>Serviços</title>
-      <link rel="stylesheet" type="text/css" href="estilo.css">
-   </head>
-   <body>
-      <header>
-         <nav>
-            <ul>
-               <li><a href="home.html">Início</a></li>
-               <li><a href="sobreNos.html">Sobre</a></li>
-               <li><a href="servicos.html">Serviços</a></li>
-               <li><a href="login.html">Login</a></li>
-            </ul>
-         </nav>
-      </header>
+  <head>
+    <meta charset="UTF-8">
+    <title>Serviços</title>
+    <link rel="stylesheet" type="text/css" href="estilo.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="home.html">Início</a></li>
+          <li><a href="sobreNos.html">Sobre</a></li>
+          <li><a href="servicos.html">Serviços</a></li>
+          <li><a href="login.html">Login</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="container">
+        <div class="servicosDiv">
+          <ul class="servicosUl">
+            <li>Atendimento via chat com nossos funcionários</li><br>
+            <img src="./imagens/servico-ao-cliente.png">
+            <p>Nossa equipe de especialistas em vinhos está pronta para ajudar e orientar você em sua jornada. Estamos aqui para oferecer recomendações, sugestões de harmonização e informações sobre cada vinho em nosso catálogo.</p>
+            <hr>
+            <li>Biblioteca de vinhos</li><br>
+            <img src="./imagens/garrafas-de-vinho.png">
+            <p>Temos um catálogo com informações sobre os mais demasiados rótulos e safras de vinhos disponíveis atualmente.</p>
+            <hr>
+            <li>Atendimento personalizado para pessoas PCD</li><br>
+            <img src="./imagens/acessibilidade.png">
+            <p>Nossa plataforma foi projetada com acessibilidade em mente, garantindo que todos os visitantes, independentemente de suas habilidades visuais ou motoras, possam navegar e desfrutar da vasta seleção de vinhos que temos a oferecer.</p>
+          </ul>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>2023 - Todos os direitos reservados</p>
+      <div>
+        <p>Contatos: </p>
+        <a href="#"><img class="avatar" src="./imagens/avatar.png" alt="logo"></a>
+        <a href="#"><img src="./imagens/instagram.png"></a>
+        <a href="#"><img src="./imagens/tik-tok.png"></a>
+      </div>
+    </footer>
+  </body>
+</html>
